crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render__history_with_resumed_thinking_block.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 10)"
---
"❯ hello                                                     "
"                                                            "
"▎ Thinking...                                               "
"▎                                                           "
"▎ pondering...                                              "
"                                                            "
"◉ Hi!                                                       "
"                                                            "
"                                                            "
"                                                            "
