crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render__tool_call_followed_by_result.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
assertion_line: 1515
expression: "render_chat(&mut chat, 60, 10)"
---
"▎ $ echo hi                                                 "
"▎ ✓ ran echo                                                "
"▎   hi                                                      "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
