crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render__tool_call_with_edit_diff_over_budget_truncates_both_sides.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
assertion_line: 2255
expression: "render_chat(&mut chat, 60, 26)"
---
"▎ ✎ Edit(/tmp/big.rs)                                       "
"▎ ✓ Edited big.rs                                           "
"▎    1 - old0                                               "
"▎    2 - old1                                               "
"▎    3 - old2                                               "
"▎    4 - old3                                               "
"▎    5 - old4                                               "
"▎    6 - old5                                               "
"▎    7 - old6                                               "
"▎    8 - old7                                               "
"▎    9 - old8                                               "
"▎   ... 4 lines hidden                                      "
"▎   14 - old13                                              "
"▎    1 + new0                                               "
"▎    2 + new1                                               "
"▎    3 + new2                                               "
"▎    4 + new3                                               "
"▎    5 + new4                                               "
"▎    6 + new5                                               "
"▎    7 + new6                                               "
"▎    8 + new7                                               "
"▎    9 + new8                                               "
"▎   ... 4 lines hidden                                      "
"▎   14 + new13                                              "
"                                                            "
"                                                            "
