crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render__tool_call_with_edit_diff_trims_identical_boundary_lines.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
assertion_line: 2322
expression: "render_chat(&mut chat, 60, 8)"
---
"▎ ✎ Edit(/tmp/f.rs)                                         "
"▎ ✓ Edited f.rs                                             "
"▎   2 +     return 42;                                      "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
