crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render__user_and_assistant_interleaved.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
assertion_line: 1507
expression: "render_chat(&mut chat, 60, 10)"
---
"❯ what is 2 + 2?                                            "
"                                                            "
"◉ The answer is 4.                                          "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
